test/regression/idl/compiler/fail/OSITopology.idl

#include "BasicServer.idl"

module OSITopology
{
   typedef sequence<string> StringSeq;

   interface AlterLineNumberViaInclude
   {
      org::jacorb::test::BasicServer ping ();
   };

   interface osiTopology
   {
      void op ();
   };
};
